crates/ruff/tests/cli/snapshots/cli__format__output_format_github.snap
---
source: crates/ruff/tests/cli/format.rs
info:
  program: ruff
  args:
    - format
    - "--no-cache"
    - "--output-format"
    - github
    - "--check"
    - input.py
---
success: false
exit_code: 1
----- stdout -----
::error title=ruff (unformatted),file=[TMP]/input.py,line=1,endLine=2::input.py:1:1: unformatted: File would be reformatted

----- stderr -----
