crates/ruff/tests/cli/snapshots/cli__format__output_format_gitlab.snap
---
source: crates/ruff/tests/cli/format.rs
info:
  program: ruff
  args:
    - format
    - "--no-cache"
    - "--output-format"
    - gitlab
    - "--check"
    - input.py
---
success: false
exit_code: 1
----- stdout -----
[
  {
    "check_name": "unformatted",
    "description": "unformatted: File would be reformatted",
    "severity": "major",
    "fingerprint": "d868d7da11a65fcf",
    "location": {
      "path": "input.py",
      "positions": {
        "begin": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 2,
          "column": 1
        }
      }
    }
  }
]
----- stderr -----
