crates/ruff/tests/cli/snapshots/cli__format__output_format_grouped.snap
---
source: crates/ruff/tests/cli/format.rs
info:
  program: ruff
  args:
    - format
    - "--no-cache"
    - "--output-format"
    - grouped
    - "--check"
    - input.py
---
success: false
exit_code: 1
----- stdout -----
input.py:
  1:1 unformatted: File would be reformatted

1 file would be reformatted

----- stderr -----
