crates/ruff/tests/cli/snapshots/cli__format__output_format_json-lines.snap
---
source: crates/ruff/tests/cli/format.rs
info:
  program: ruff
  args:
    - format
    - "--no-cache"
    - "--output-format"
    - json-lines
    - "--check"
    - input.py
---
success: false
exit_code: 1
----- stdout -----
{"cell":null,"code":"unformatted","end_location":{"column":1,"row":2},"filename":"[TMP]/input.py","fix":{"applicability":"safe","edits":[{"content":"","end_location":{"column":1,"row":2},"location":{"column":1,"row":1}}],"message":null},"location":{"column":1,"row":1},"message":"File would be reformatted","name":"unformatted","noqa_row":null,"severity":"error","url":null}

----- stderr -----
