crates/ruff/tests/cli/snapshots/cli__format__output_format_junit.snap
---
source: crates/ruff/tests/cli/format.rs
info:
  program: ruff
  args:
    - format
    - "--no-cache"
    - "--output-format"
    - junit
    - "--check"
    - input.py
---
success: false
exit_code: 1
----- stdout -----
<?xml version="1.0" encoding="UTF-8"?>
<testsuites name="ruff" tests="1" skipped="0" failures="1" errors="0">
    <testsuite name="[TMP]/input.py" tests="1" skipped="0" errors="0" failures="1" package="org.ruff">
        <testcase name="org.ruff.unformatted" classname="[TMP]/input" line="1" column="1">
            <properties>
                <property name="severity" value="error"/>
            </properties>
            <failure message="File would be reformatted">line 1, col 1, File would be reformatted</failure>
        </testcase>
    </testsuite>
</testsuites>

----- stderr -----
