crates/ruff/tests/cli/snapshots/cli__format__output_format_pylint.snap
---
source: crates/ruff/tests/cli/format.rs
info:
  program: ruff
  args:
    - format
    - "--no-cache"
    - "--output-format"
    - pylint
    - "--check"
    - input.py
---
success: false
exit_code: 1
----- stdout -----
input.py:1: [unformatted] File would be reformatted

----- stderr -----
